WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213530
[iOS] Open element actions sometimes result in a hover instead of a click
https://bugs.webkit.org/show_bug.cgi?id=213530
Summary
[iOS] Open element actions sometimes result in a hover instead of a click
Andy Estes
Reported
2020-06-23 14:02:15 PDT
[iOS] Open element actions sometimes result in a hover instead of a click
Attachments
Patch
(34.13 KB, patch)
2020-06-23 14:55 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(34.08 KB, patch)
2020-06-24 13:11 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-06-23 14:02:48 PDT
rdar://problem/64176707
Andy Estes
Comment 2
2020-06-23 14:55:19 PDT
Created
attachment 402595
[details]
Patch
Darin Adler
Comment 3
2020-06-24 12:48:05 PDT
Comment on
attachment 402595
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402595&action=review
> Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:815 > + auto delegate = _delegate.getAutoreleased();
Why autoreleased? Autoreleased has unwanted performance cost. We need it when the result is being used as a non-smart-pointer return value, and not in any other cases I can think of. Let's use RetainPtr here, not autorelease. Just "auto delegate = _delegate.get()". This is analogous to what would be generated if we were using ARC, in fact. At some point, most calls to getAutoreleased elsewhere should also be replaced with calls to get, with some minor refactoring possibly needed to work with RetainPtr rather than a raw pointer.
Andy Estes
Comment 4
2020-06-24 13:05:16 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 402595
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=402595&action=review
> > > Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:815 > > + auto delegate = _delegate.getAutoreleased(); > > Let's use RetainPtr here, not autorelease.
Will do.
Andy Estes
Comment 5
2020-06-24 13:11:54 PDT
Created
attachment 402675
[details]
Patch
EWS
Comment 6
2020-06-24 13:52:34 PDT
Committed
r263472
: <
https://trac.webkit.org/changeset/263472
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402675
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug